# inertial-positioning-benchmark

./: README.md  README_EN.md  pyproject.toml
docs/: DATASETS.md  DATASET_REVIEW.md  DATASET_SURVEY.md  FORMAT.md  PAPERS.md  PAPER_REVIEW.md  TIMELINE.md
src/inertial_benchmark/: __init__.py  data.py
tests/: test_data.py
