[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "inertial-positioning-benchmark"
version = "0.1.0"
description = "Unified data interface for inertial positioning benchmarks"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["h5py>=3.8", "numpy>=1.23"]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/inertial_benchmark"]

[tool.pytest.ini_options]
testpaths = ["tests"]

